--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_localizations:
     sdk: flutter
   flutter_lints: ^2.0.0
@@ -27,6 +23,22 @@ dev_dependencies:
   google_fonts: ^3.0.1
   pull_to_refresh_flutter3: ^2.0.1
   device_info_plus: ^8.1.0
+  fluttertoast: ^8.1.3
+  app_settings: ^4.1.8
+  permission_handler:
+  carousel_slider: ^4.1.1
+  json_serializable: ^6.4.0
+  json_annotation: ^4.8.0
+  logger: ^1.1.0
+  equatable: ^2.0.5
+  collection:
+  dropdown_button2: ^1.9.2
+  get_it:
+  dio: ^4.0.6
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  copy_with_extension_gen: ^5.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
