--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,14 +20,13 @@ dependencies:
   intl: ^0.17.0
   url_launcher: ^6.1.6
   flutter_cache_manager: ^3.1.2
-  google_fonts: ^3.0.1
   pull_to_refresh_flutter3: ^2.0.1
   device_info_plus: ^8.1.0
   fluttertoast: ^8.1.3
   app_settings: ^4.1.8
   permission_handler:
   carousel_slider: ^4.1.1
-  json_serializable: ^6.4.0
+
   json_annotation: ^4.8.0
   logger: ^1.1.0
   equatable: ^2.0.5
@@ -39,6 +38,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   copy_with_extension_gen: ^5.0.0
+  build_runner: any
+  json_serializable: ^6.4.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
