--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=/Users/phong/flutter
-FLUTTER_APPLICATION_PATH=/Users/phong/StudioProjects/base_package
+FLUTTER_APPLICATION_PATH=/Users/phong/Project/Excel Tech/base_package
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib/main.dart
 FLUTTER_BUILD_DIR=build
