--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.2
   flutter_svg: ^1.1.4
+  image_picker: ^0.8.6
   intl: ^0.17.0
   url_launcher: ^6.1.6
   flutter_cache_manager: ^3.1.2
