--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=/Users/phong/flutter
-FLUTTER_APPLICATION_PATH=/Users/phong/Project/Excel Tech/base_package
+FLUTTER_APPLICATION_PATH=/Users/phong/Project/ExcelTech/base_package
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=0.0.1
