--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  dropdown_below: ^1.0.3
   flutter_lints: ^2.0.0
   cached_network_image: ^3.2.1
   cupertino_icons: ^1.0.2
