--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,24 +14,24 @@ dependencies:
     sdk: flutter
   dropdown_below: ^1.0.3
   flutter_lints: ^2.0.0
-  cached_network_image: ^3.2.1
+  cached_network_image: any
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.2
-  flutter_svg: ^1.1.4
+  flutter_svg: any
   image_picker: ^0.8.6
-  intl: ^0.17.0
-  url_launcher: ^6.1.6
+  intl: any
+  url_launcher: any
   flutter_cache_manager: ^3.1.2
   pull_to_refresh_flutter3: ^2.0.1
   device_info_plus: ^8.1.0
-  fluttertoast: ^8.1.3
+  fluttertoast: any
   app_settings: ^4.1.8
   permission_handler:
   carousel_slider: ^4.1.1
 
   json_annotation: ^4.8.0
-  logger: ^1.1.0
-  equatable: ^2.0.5
+  logger: any
+  equatable: any
   collection:
   dropdown_button2: ^1.9.2
   get_it:
