--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   app_settings: ^4.1.8
   permission_handler:
   carousel_slider: ^4.1.1
-  json_annotation: ^4.8.0
+  json_annotation: any
   logger: any
   equatable: any
   collection:
@@ -36,13 +36,14 @@ dependencies:
   get_it:
   dio: ^4.0.6
   get:
+  diacritic: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
 #    need add below line into your project
-  copy_with_extension_gen: ^5.0.0
+  copy_with_extension_gen: any
   build_runner: any
-  json_serializable: ^6.4.0
+  json_serializable: any
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
