--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   dio: ^4.0.6
   get:
   diacritic: any
+  scroll_to_index: any
+  visibility_detector: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
