--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,12 @@ dependencies:
   scroll_to_index: any
   visibility_detector: any
   copy_with_extension: ^5.0.4
+  flutter_bloc: ^8.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
   #    need add below line into your project
-  cop: any
+#  cop: any
   build_runner: any
   json_serializable: any
 # For information on the generic Dart part of this file, see the
