--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   cached_network_image: any
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.2
-  flutter_svg: any
+  flutter_svg: ^2.0.10+1
   image_picker:  ^1.0.4
   intl: any
   url_launcher: any
